--- a/src/i18n/messages/hi.json
+++ b/src/i18n/messages/hi.json
@@ -85,7 +85,9 @@
     "developer": "डेवलपर उपकरण",
     "developer_desc": "क्रॉन और ऑटोमेशन के लिए सहायक उपयोगिताएँ",
     "generators": "जेनरेटर उपकरण",
-    "generators_desc": "UUID, पासवर्ड और अधिक के लिए यादृच्छिक डेटा जेनरेशन उपकरण"
+    "generators_desc": "UUID, पासवर्ड और अधिक के लिए यादृच्छिक डेटा जेनरेशन उपकरण",
+    "docker": "Docker उपकरण",
+    "docker_desc": "Docker कमांड रूपांतरण और कॉन्फ़िगरेशन जेनरेशन उपकरण"
   },
   "changelog": {
     "title": "चेंजलॉग",
@@ -152,12 +154,20 @@
       "name": "JSON से CSV",
       "description": "JSON डेटा को CSV प्रारूप में परिवर्तित करें",
       "placeholder": "कृपया JSON डेटा (ऑब्जेक्ट एरे या एकल ऑब्जेक्ट) दर्ज करें...",
+      "csv_placeholder": "कृपया CSV डेटा दर्ज करें (पहली पंक्ति हेडर के रूप में)...",
       "invalid": "अमान्य JSON प्रारूप",
+      "invalid_csv": "अमान्य CSV प्रारूप",
       "invalid_format": "कृपया मान्य JSON ऑब्जेक्ट या ऑब्जेक्ट एरे दर्ज करें",
       "input_title": "JSON इनपुट",
+      "input_desc": "परिवर्तित करने के लिए JSON डेटा दर्ज करें",
+      "csv_input_title": "CSV इनपुट",
+      "csv_input_desc": "परिवर्तित करने के लिए CSV डेटा दर्ज करें",
       "output_title": "CSV आउटपुट",
       "output_desc": "परिवर्तित CSV डेटा",
+      "json_output_title": "JSON आउटपुट",
+      "json_output_desc": "परिवर्तित JSON डेटा",
       "output_placeholder": "परिवर्तित CSV यहां प्रदर्शित होगा...",
+      "json_output_placeholder": "परिवर्तित JSON यहां प्रदर्शित होगा...",
       "usage_title": "उपयोग निर्देश",
       "rows_columns": "{rows} पंक्तियां × {columns} स्तंभ",
       "usage_array_format": "• JSON ऑब्जेक्ट एरे प्रारूप का समर्थन करता है:",
@@ -207,13 +217,21 @@
       "name": "JSON से YAML",
       "description": "JSON डेटा को YAML प्रारूप में परिवर्तित करें",
       "placeholder": "कृपया JSON डेटा दर्ज करें...",
+      "yaml_placeholder": "कृपया YAML डेटा दर्ज करें...",
       "invalid": "अमान्य JSON प्रारूप",
+      "invalid_json": "अमान्य JSON प्रारूप",
+      "invalid_yaml": "अमान्य YAML प्रारूप",
       "convert": "YAML में परिवर्तित करें",
       "input_title": "JSON इनपुट",
       "input_desc": "परिवर्तित करने के लिए JSON डेटा दर्ज करें",
+      "yaml_input_title": "YAML इनपुट",
+      "yaml_input_desc": "परिवर्तित करने के लिए YAML डेटा दर्ज करें",
       "output_title": "YAML आउटपुट",
       "output_desc": "परिवर्तित YAML डेटा",
+      "json_output_title": "JSON आउटपुट",
+      "json_output_desc": "परिवर्तित JSON डेटा",
       "output_placeholder": "परिवर्तित YAML यहां प्रदर्शित होगा...",
+      "json_output_placeholder": "परिवर्तित JSON यहां प्रदर्शित होगा...",
       "introduction": "JSON से YAML कनवर्टर एक फॉर्मेट कन्वर्शन टूल है जो विशेष रूप से कॉन्फ़िगरेशन फाइल प्रबंधन और डेटा एक्सचेंज के लिए डिज़ाइन किया गया है। यह JSON डेटा स्ट्रक्चर को बिना नुकसान के YAML फॉर्मेट में परिवर्तित कर सकता है, जटिल नेस्टेड ऑब्जेक्ट्स और एरे स्ट्रक्चर्स का समर्थन करता है, और स्वचालित रूप से उचित इंडेंटेशन के साथ पठनीय YAML आउटपुट जेनरेट करता है। DevOps, कॉन्फ़िगरेशन प्रबंधन, API डॉक्यूमेंटेशन आदि विभिन्न परिदृश्यों के लिए उपयुक्त है।",
       "features": [
         "🔄 हानिरहित JSON से YAML फॉर्मेट कन्वर्शन",
@@ -255,12 +273,23 @@
       "placeholder": "कृपया JSON डेटा दर्ज करें...",
       "invalid": "अमान्य JSON प्रारूप",
       "convert_button": "XML में परिवर्तित करें",
+      "input_title": "JSON इनपुट",
+      "input_desc": "परिवर्तित करने के लिए JSON डेटा दर्ज करें",
+      "xml_input_title": "XML इनपुट",
+      "xml_input_desc": "परिवर्तित करने के लिए XML डेटा दर्ज करें",
+      "output_title": "XML आउटपुट",
+      "output_desc": "परिवर्तित XML डेटा",
+      "json_output_title": "JSON आउटपुट",
+      "json_output_desc": "परिवर्तित JSON डेटा",
       "input_placeholder": "कृपया परिवर्तित करने के लिए JSON डेटा दर्ज करें...",
+      "xml_input_placeholder": "कृपया परिवर्तित करने के लिए XML डेटा दर्ज करें...",
       "output_placeholder": "परिवर्तित XML यहां प्रदर्शित होगा...",
+      "json_output_placeholder": "परिवर्तित JSON यहां प्रदर्शित होगा...",
       "root_element": "रूट एलिमेंट नाम",
       "errors": {
         "empty_input": "कृपया JSON डेटा दर्ज करें",
-        "invalid_json": "अमान्य JSON प्रारूप"
+        "invalid_json": "अमान्य JSON प्रारूप",
+        "invalid_xml": "अमान्य XML प्रारूप"
       },
       "success": "रूपांतरण सफल",
       "conversion_complete": "JSON से XML रूपांतरण पूर्ण",
@@ -1599,6 +1628,66 @@
         "title": "Cron अभिव्यक्ति विश्लेषक - ऑनलाइन Cron वैलिडेटर",
         "description": "मुफ़्त ऑनलाइन Cron अभिव्यक्ति विश्लेषक जो सिंटैक्स की जाँच करता है और आगामी रनिंग का पूर्वावलोकन दिखाता है।",
         "keywords": "Cron अभिव्यक्ति,Cron वैलिडेटर,Cron शेड्यूल,Cron परीक्षण,ऑटोमेशन उपकरण"
+      }
+    },
+    "docker-run-to-compose": {
+      "name": "Docker Run से Compose",
+      "description": "docker run कमांड को docker-compose.yml फॉर्मेट में बदलें",
+      "input_title": "Docker Run कमांड",
+      "input_desc": "अपना docker run कमांड पेस्ट या दर्ज करें",
+      "input_placeholder": "docker run कमांड दर्ज करें...\nउदाहरण: docker run -d -p 8080:80 --name my-nginx -v /data:/usr/share/nginx/html nginx:latest",
+      "output_title": "Docker Compose कॉन्फ़िगरेशन",
+      "output_desc": "जेनरेट किया गया docker-compose.yml कॉन्टेंट",
+      "output_placeholder": "परिवर्तित docker-compose.yml यहाँ दिखाई देगा...",
+      "convert_button": "Compose में बदलें",
+      "invalid_command": "अमान्य docker run कमांड",
+      "conversion_failed": "रूपांतरण विफल, कृपया कमांड प्रारूप की जाँच करें",
+      "tips_title": "उपयोग गाइड",
+      "tip1_title": "कमांड प्रारूप",
+      "tip1_desc": "विभिन्न पैरामीटर और विकल्पों के साथ मानक docker run कमांड का समर्थन करता है",
+      "tip2_title": "समर्थित पैरामीटर",
+      "tip2_desc": "-p/-d/-v/-e/--name/--network/--restart और अन्य सामान्य पैरामीटर का समर्थन करता है",
+      "tip3_title": "छवि नाम",
+      "tip3_desc": "सुनिश्चित करें कि कमांड में एक मान्य छवि नाम और टैग शामिल है",
+      "tip4_title": "डेटा सुरक्षा",
+      "tip4_desc": "सभी रूपांतरण स्थानीय रूप से किए जाते हैं, कमांड और कॉन्फ़िगरेशन सर्वर पर अपलोड नहीं होते",
+      "introduction": "Docker Run से Compose एक कमांड रूपांतरण उपकरण है जो Docker उपयोगकर्ताओं के लिए डिज़ाइन किया गया है, जो docker run कमांड को मानक docker-compose.yml कॉन्फ़िगरेशन फ़ाइल प्रारूप में तेज़ी से बदलने में सक्षम है। सीधे docker run कमांड का उपयोग करने की तुलना में, docker-compose स्पष्ट कॉन्फ़िगरेशन, आसान प्रबंधन और मल्टी-कंटेनर ऑर्केस्ट्रेशन के लिए समर्थन जैसे लाभ प्रदान करता है। यह उपकरण docker run कमांड में विभिन्न पैरामीटरों को बुद्धिमानी से पार्स करता है और स्वचालित रूप से मानक YAML कॉन्फ़िगरेशन जेनरेट करता है, Docker कंटेनर प्रबंधन दक्षता में काफी सुधार करता है, जो DevOps और डेवलपर्स के लिए एक आवश्यक सहायक है।",
+      "features": [
+        "🔄 docker run कमांड का बुद्धिमान पार्सिंग, कई पैरामीटर प्रारूपों का समर्थन",
+        "📝 मानक docker-compose.yml कॉन्फ़िगरेशन फ़ाइलों का स्वचालित जेनरेशन",
+        "🎯 पोर्ट मैपिंग, वॉल्यूम माउंटिंग, पर्यावरण चर और अन्य सामान्य कॉन्फ़िगरेशन के लिए समर्थन",
+        "⚡ वास्तविक समय रूपांतरण तुरंत उपयोग योग्य compose कॉन्फ़िगरेशन के साथ",
+        "📋 जेनरेट किए गए कॉन्फ़िगरेशन को क्लिपबोर्ड पर एक-क्लिक कॉपी",
+        "💾 docker-compose.yml फ़ाइल के रूप में सीधे डाउनलोड",
+        "🔒 स्थानीय प्रसंस्करण कमांड और कॉन्फ़िगरेशन सुरक्षा सुनिश्चित करता है",
+        "📱 मोबाइल और डेस्कटॉप डिवाइस का समर्थन करने वाला रिस्पॉन्सिव डिज़ाइन"
+      ],
+      "faq": [
+        {
+          "question": "docker run को docker-compose में क्यों बदलें?",
+          "answer": "docker-compose बेहतर कॉन्फ़िगरेशन प्रबंधन प्रदान करता है: 1) संस्करण नियंत्रण और टीम सहयोग के लिए फ़ाइल-आधारित कॉन्फ़िगरेशन; 2) सेवा निर्भरता परिभाषाओं के साथ मल्टी-कंटेनर ऑर्केस्ट्रेशन के लिए समर्थन; 3) सभी सेवाओं को एक-कमांड शुरू और बंद करें; 4) स्पष्ट और अधिक पठनीय कॉन्फ़िगरेशन, रखरखाव और संशोधन करना आसान; 5) पर्यावरण चर और कॉन्फ़िगरेशन पुन: उपयोग के लिए समर्थन। लंबी अवधि के रखरखाव की आवश्यकता वाली परियोजनाओं के लिए, docker-compose का उपयोग सर्वोत्तम प्रथा है।"
+        },
+        {
+          "question": "उपकरण कौन से docker run पैरामीटर का समर्थन करता है?",
+          "answer": "उपकरण अधिकांश सामान्य पैरामीटरों का समर्थन करता है जिसमें शामिल हैं: -p/--publish (पोर्ट मैपिंग), -v/--volume (वॉल्यूम माउंटिंग), -e/--env (पर्यावरण चर), --name (कंटेनर नाम), -d/--detach (बैकग्राउंड मोड), --restart (पुनरारंभ नीति), --network (नेटवर्क कॉन्फ़िगरेशन), --link (कंटेनर लिंकिंग), --workdir (कार्य निर्देशिका), --user (उपयोगकर्ता), आदि। असमर्थित पैरामीटरों के लिए, उपकरण मैनुअल समायोजन के लिए मूल कमांड को संरक्षित करता है।"
+        },
+        {
+          "question": "क्या जेनरेट की गई docker-compose.yml का सीधे उपयोग किया जा सकता है?",
+          "answer": "जेनरेट की गई कॉन्फ़िगरेशन फ़ाइल docker-compose विनिर्देशों का पालन करती है और अधिकांश मामलों में सीधे उपयोग की जा सकती है। हालाँकि, वास्तविक आवश्यकताओं के अनुसार जाँच और समायोजन करने की सिफारिश की जाती है: 1) सत्यापित करें कि पोर्ट मैपिंग सही हैं; 2) वॉल्यूम माउंट पथ की जाँच करें; 3) पर्यावरण चर सेटिंग्स की पुष्टि करें; 4) आवश्यकतानुसार नेटवर्क कॉन्फ़िगरेशन, संसाधन सीमा और अन्य उन्नत विकल्प जोड़ें; 5) जटिल परिदृश्यों में कॉन्फ़िगरेशन संरचना के मैनुअल अनुकूलन की आवश्यकता हो सकती है।"
+        },
+        {
+          "question": "संवेदनशील जानकारी वाले कमांड को कैसे संभालें?",
+          "answer": "सभी रूपांतरण ऑपरेशन आपके ब्राउज़र में स्थानीय रूप से पूर्ण होते हैं, और कमांड सामग्री कभी भी किसी सर्वर पर अपलोड नहीं होती है। हालाँकि, अभी भी सिफारिश की जाती है: 1) रूपांतरण से पहले संवेदनशील पासवर्ड और कुंजी हटा दें; 2) संवेदनशील कॉन्फ़िगरेशन को प्रबंधित करने के लिए पर्यावरण चर फ़ाइलों (.env) का उपयोग करें; 3) जेनरेट की गई कॉन्फ़िगरेशन फ़ाइलों में सादा पाठ पासवर्ड शामिल न करें; 4) docker-compose.yml को .gitignore में जोड़ें यदि इसमें संवेदनशील जानकारी है; 5) उत्पादन वातावरण में संवेदनशील डेटा को प्रबंधित करने के लिए Docker secrets का उपयोग करें।"
+        },
+        {
+          "question": "रूपांतरण विफल होने पर क्या करें? कैसे हल करें?",
+          "answer": "रूपांतरण विफलता के सामान्य कारण और समाधान: 1) जाँचें कि कमांड 'docker run' से शुरू होता है या नहीं; 2) सुनिश्चित करें कि इसमें एक छवि नाम शामिल है; 3) सत्यापित करें कि पैरामीटर प्रारूप सही है (जैसे -p 8080:80); 4) कमांड से विशेष वर्ण और एस्केप अनुक्रम हटाएं; 5) कमांड को सरल बनाने का प्रयास करें और धीरे-धीरे पैरामीटर जोड़ें; 6) उपकरण के प्रदान किए गए उदाहरण कमांड प्रारूप को देखें। यदि समस्या बनी रहती है, तो आप मैनुअल रूप से एक बुनियादी कॉन्फ़िगरेशन बना सकते हैं और फिर समायोजित कर सकते हैं।"
+        }
+      ],
+      "meta": {
+        "title": "Docker Run से Compose उपकरण",
+        "description": "ऑनलाइन Docker Run कमांड रूपांतरण उपकरण। docker run कमांड को docker-compose.yml कॉन्फ़िगरेशन फ़ाइलों में तेज़ी से बदलें, कंटेनर प्रबंधन दक्षता में सुधार करें।",
+        "keywords": "Docker,docker-compose,कंटेनर ऑर्केस्ट्रेशन,कमांड रूपांतरण,YAML कॉन्फ़िगरेशन,DevOps उपकरण,ऑनलाइन उपकरण"
       }
     },
     "base64-file-converter": {
