--- a/src/i18n/messages/hi.json
+++ b/src/i18n/messages/hi.json
@@ -1630,6 +1630,68 @@
         "keywords": "Cron अभिव्यक्ति,Cron वैलिडेटर,Cron शेड्यूल,Cron परीक्षण,ऑटोमेशन उपकरण"
       }
     },
+    "color-converter": {
+      "name": "रंग कन्वर्टर",
+      "description": "HEX, RGB, HSL और CSS रंग नामों के बीच रंग परिवर्तित करें",
+      "input_title": "रंग इनपुट",
+      "input_desc": "किसी भी प्रारूप में रंग मान दर्ज करें",
+      "input_placeholder": "रंग मान दर्ज करें, उदाहरण: #FF5733, rgb(255, 87, 51), hsl(9, 100%, 60%) या red",
+      "output_title": "रूपांतरण परिणाम",
+      "color_preview": "रंग पूर्वावलोकन",
+      "hex_format": "HEX प्रारूप",
+      "rgb_format": "RGB प्रारूप",
+      "hsl_format": "HSL प्रारूप",
+      "css_name": "CSS रंग नाम",
+      "invalid_color": "अमान्य रंग मान",
+      "no_css_name": "कोई संबंधित CSS रंग नाम नहीं",
+      "tips_title": "उपयोग गाइड",
+      "tip1_title": "समर्थित प्रारूप",
+      "tip1_desc": "HEX (#RGB, #RRGGBB), RGB, HSL और CSS रंग नामों का समर्थन करता है",
+      "tip2_title": "स्वचालित पहचान",
+      "tip2_desc": "इनपुट प्रारूप को स्वचालित रूप से पहचानता है और अन्य प्रारूपों में परिवर्तित करता है",
+      "tip3_title": "लाइव पूर्वावलोकन",
+      "tip3_desc": "वास्तविक समय रंग पूर्वावलोकन और सभी प्रारूपों के लिए रूपांतरण परिणाम",
+      "tip4_title": "त्वरित कॉपी",
+      "tip4_desc": "विभिन्न प्रारूपों में रंग मान तुरंत कॉपी करने के लिए कॉपी बटन क्लिक करें",
+      "introduction": "रंग कन्वर्टर एक पेशेवर रंग प्रारूप रूपांतरण टूल है जो HEX, RGB, HSL और CSS रंग नामों के बीच मुफ़्त रूपांतरण का समर्थन करता है। चाहे आप वेब डिज़ाइनर, फ्रंटएंड डेवलपर या UI/UX डिज़ाइनर हों, आप आवश्यक प्रारूप में रंग मान तुरंत प्राप्त कर सकते हैं। टूल वास्तविक समय रंग पूर्वावलोकन प्रदान करता है और विभिन्न प्रारूपों की एक-क्लिक कॉपी का समर्थन करता है, डिज़ाइन और विकास दक्षता में काफी सुधार करता है।",
+      "features": [
+        "🎨 कई प्रारूपों का समर्थन: HEX, RGB, HSL, CSS रंग नाम",
+        "🔄 स्मार्ट प्रारूप पहचान और स्वचालित रूपांतरण",
+        "👁️ दृश्य प्रतिक्रिया के लिए वास्तविक समय रंग पूर्वावलोकन",
+        "📋 सभी रंग प्रारूपों के लिए एक-क्लिक कॉपी",
+        "⚡ टाइप करते ही तुरंत रूपांतरण",
+        "🎯 सटीक रंग मान गणना और रूपांतरण",
+        "🌈 140+ मानक CSS रंग नामों का समर्थन",
+        "📱 मोबाइल और डेस्कटॉप के लिए रिस्पॉन्सिव डिज़ाइन"
+      ],
+      "faq": [
+        {
+          "question": "कौन से रंग प्रारूप समर्थित हैं?",
+          "answer": "टूल चार मुख्य प्रारूपों का समर्थन करता है: 1) HEX प्रारूप (जैसे #FF5733 या #F53); 2) RGB प्रारूप (जैसे rgb(255, 87, 51)); 3) HSL प्रारूप (जैसे hsl(9, 100%, 60%)); 4) CSS रंग नाम (जैसे red, blue, cornflowerblue और 140+ मानक रंग नाम)।"
+        },
+        {
+          "question": "HEX, RGB और HSL में क्या अंतर है?",
+          "answer": "HEX हेक्साडेसिमल रंग प्रतिनिधित्व है, जो आमतौर पर CSS और डिज़ाइन टूल में उपयोग किया जाता है। RGB लाल, हरे, नीले प्राथमिक रंगों पर आधारित है, प्रत्येक चैनल 0-255। HSL रंग, संतृप्ति, चमक पर आधारित है, रंग की मानव धारणा के लिए अधिक सहज है, जिससे चमक और जीवंतता को समायोजित करना आसान हो जाता है।"
+        },
+        {
+          "question": "CSS रंग नामों का उपयोग कैसे करें?",
+          "answer": "बस मानक CSS रंग नाम दर्ज करें जैसे red, blue, green, coral आदि। टूल स्वचालित रूप से पहचान करेगा और अन्य प्रारूपों में परिवर्तित करेगा। ध्यान दें कि केवल 140+ मानक CSS रंगों के संबंधित नाम हैं; अन्य रंग 'कोई संबंधित CSS रंग नाम नहीं' दिखाएंगे।"
+        },
+        {
+          "question": "रूपांतरण परिणाम कितने सटीक हैं?",
+          "answer": "टूल परिणाम सटीकता सुनिश्चित करने के लिए मानक रंग रूपांतरण एल्गोरिदम का उपयोग करता है। RGB और HEX रूपांतरण हानिरहित है। HSL से RGB रूपांतरण में मामूली सटीकता अंतर हो सकता है (आमतौर पर 1 से कम), जिसे व्यावहारिक उपयोग में नजरअंदाज किया जा सकता है।"
+        },
+        {
+          "question": "कुछ रंगों के संबंधित CSS नाम क्यों नहीं हैं?",
+          "answer": "CSS केवल 147 मानक रंग नामों को परिभाषित करता है (transparent सहित), जबकि लाखों अन्य रंगों के संबंधित नाम नहीं हैं। यदि आपका इनपुट रंग मानक रंग सूची में नहीं है, तो टूल 'कोई संबंधित CSS रंग नाम नहीं' दिखाएगा, लेकिन फिर भी HEX, RGB और HSL प्रारूप सामान्य रूप से प्रदर्शित करेगा।"
+        }
+      ],
+      "meta": {
+        "title": "रंग कन्वर्टर - HEX RGB HSL CSS रंग प्रारूप रूपांतरण",
+        "description": "ऑनलाइन रंग प्रारूप रूपांतरण टूल। वास्तविक समय पूर्वावलोकन और एक-क्लिक कॉपी के साथ HEX, RGB, HSL और CSS रंग नामों के बीच परिवर्तित करें।",
+        "keywords": "रंग कन्वर्टर,HEX से RGB,RGB से HSL,CSS रंग,रंग प्रारूप रूपांतरण,ऑनलाइन टूल"
+      }
+    },
     "docker-run-to-compose": {
       "name": "Docker Run से Compose",
       "description": "docker run कमांड को docker-compose.yml फॉर्मेट में बदलें",
